# polymarket-research-bot

./: .env.example  .gitignore  README.md  pyproject.toml
src/research_bot/: __init__.py  budget.py  cli.py  config.py  orchestrator.py  prompts.py
src/research_bot/gordon/: __init__.py  client.py  inference.py  routing.py
src/research_bot/pipeline/: __init__.py  decomposer.py  edge.py  estimator.py  notes.py  researcher.py  scanner.py
src/research_bot/polymarket/: __init__.py  clob.py  gamma.py
src/research_bot/store/: __init__.py  db.py
tests/: test_core.py  test_integration.py
